se crea segunda plantilla layout y se inician a arredlar estilos css

--- a/libro/pages/14-agua01.html
+++ b/libro/pages/14-agua01.html
@@ -1,4 +1,4 @@
-{% extends "content.html" %} {%block title %} pagina 1 {% endblock %} {% load static %} {% block content1 %}
+{% extends "layout.html" %} {%block title %} pagina 1 {% endblock %} {% load static %} {% block content1 %}
 
 
 <p>
@@ -13,7 +13,7 @@
 
     <section class="recuadro">
         <h3 class="cursiva-media"> Recuerda: </h3>
-        <br> Tú eres la única persona responsable de ti y de que tus metas y propósitos de vida se conviertan en realidad.
+        Tú eres la única persona responsable de ti y de que tus metas y propósitos de vida se conviertan en realidad.
     </section>
 </p>
 {% endblock %} {% block content2 %}
@@ -22,6 +22,8 @@
 <style>
     .backimage {
         margin-top: 25%;
+        margin-left: 10%;
+        margin-right: 0%;
         display: flex;
         position: relative;
         flex-direction: column;
@@ -39,11 +41,13 @@
 <section class="backimage">
 
     <h3 class="cursiva-media"> Tú despiertas la magia que existe en ti.</h3>
-    <p>
+    <p style="width: 90%;">
         <h5>Trabajemos sobre el primer elemento:</h5> <br>
         <h5>AGUA.</h5>
-        <br> El 70% de la masa corporal de una persona adulta está compuesto por el agua, y el 71% de la superficie de la tierra es agua. Este es un elemento que habla de la fluidez, la serenidad, de ser flexible ante las lecciones de la vida, de andar
-        sin detenerse y de ser cambiante en todas las dimensiones de tu ser.
+         
+        El 70% de la masa corporal de una persona adulta está compuesto por el agua, y el 71% de la superficie de la tierra
+         es agua. Este es un elemento que habla de la fluidez, la serenidad, de ser flexible ante las lecciones de la vida,
+         de andar sin detenerse y de ser cambiante en todas las dimensiones de tu ser.
     </p>
 
 </section>
