funcionando cambiar y revisar footer no funciona

--- a/libro/pages/16-agua03.html
+++ b/libro/pages/16-agua03.html
@@ -2,6 +2,7 @@
 static %} {% block content1 %}
 
 <h2 class="cursiva-media">Cuestionario de Autodimensión</h2>
+<p>Selecciona en cada pregunta el puntaje entre 10 y 100, y obten la gráfica de tus hábitos:</p>
 
 <datalist id="tickmarks">
   <option value="10">10</option>
