--- a/libro/pages/04-agradecimientos-indice.html
+++ b/libro/pages/04-agradecimientos-indice.html
@@ -71,3 +71,10 @@
 <a class="siguiente" href="prologo1">-></a>
 
 {% endblock %}
+
+{% block footer %}
+
+
+{% include 'footer.html' %}
+
+{% endblock %}
