pendiente arreglar estados de usuarios y rutas

--- a/libro/pages/04-agradecimientos-indice.html
+++ b/libro/pages/04-agradecimientos-indice.html
@@ -19,8 +19,8 @@
 <img src='{% static "img/p3/firma.pNG" alt="firma" %}'> {% endblock %} {% block content2 %}
 <span class="cursiva-media">Indice</span>
 
-<ol>
-    <a href=""> Prólogo 1<span>8</span></a>
+<ol class="indice">
+    <a href="/prologo1/"> Prólogo 1<span>8</span></a>
     <a href=""> Prólogo 2<span>10</span></a>
     <a href=""> Introducción<span>12</span></a></a>
     <a href=""> La magia<span>17</span></a></a><br>
@@ -68,7 +68,7 @@
 
     <a href=""> &emsp; -Para vivir el elemento fuego en nuestras vidas<span>140</span></a><br>
 </ol>
-<a class="siguiente" href="prologo1">-></a>
+<a class="siguiente" href="/prologo1">-></a>
 
 {% endblock %}
 
