--- a/libro/pages/08-introduccion1.html
+++ b/libro/pages/08-introduccion1.html
@@ -2,9 +2,9 @@
 
 
 
-
-<img src="{% static 'img/intro1/introduccion.png' %}" alt="" class="portrait"> {% endblock %} {% block content2 %}
-
+<img src="{% static 'img/intro1/introbg2.png' %}" class="imgcentral">
+<img src="{% static 'img/intro1/intro-logo.png' %}" alt="" class="portrait"> {% endblock %} {% block content2 %}
+<img src="{% static 'img/intro1/introbg2.png' %}" class="imgcentral">
 <p>
 
     ¿Qué tal si comenzamos por una breve pausa en tu vida? Durante tantos años te has preparado, has estudiado, has trabajado, has orado, siempre en busca de frutos emocionales, intelectuales, espirituales, económicos… ¿Hasta qué punto has logrado estos frutos?
