--- a/libro/pages/04-agradecimientos-indice.html
+++ b/libro/pages/04-agradecimientos-indice.html
@@ -21,15 +21,15 @@
 
 <ol class="indice">
     <a href="/prologo1/"> Prólogo 1<span>8</span></a>
-    <a href=""> Prólogo 2<span>10</span></a>
-    <a href=""> Introducción<span>12</span></a></a>
-    <a href=""> La magia<span>17</span></a></a><br>
-    <a href=""> Acto I - Agua</a>
-    <a href=""> &emsp; -Cuestionario de autodimensión <span>28</span></a>
+    <a href="/prologo2/"> Prólogo 2<span>10</span></a>
+    <a href="/intro1/"> Introducción<span>12</span></a></a>
+    <a href="/magia01/"> La magia<span>17</span></a></a><br>
+    <a href="/agua01/"> Acto I - Agua</a>
+    <a href="/agua03/"> &emsp; -Cuestionario de autodimensión <span>28</span></a>
     <a href=""> &emsp; -Resultado de las áreas <span>43</span></a>
     <a href=""> &emsp; -Gráfica rueda de la vida <span>44</span></a>
     <a href=""> &emsp; -Referentes gráficos <span>46</span></a>
-    <a href=""> &emsp; -¿Quién soy yo? <span>50</span></a>
+    <a href="/la-persona-importante/"> &emsp; -¿Quién soy yo? <span>50</span></a>
     <a href=""> &emsp; -¿En qué soy o no exitoso? <span>52</span></a>
     <a href=""> &emsp; -Para vivir el elemento agua en nuestras vidas<span>54</span></a><br>
 
