se annade navegación entre paginas de libro hasta magia01

--- a/libro/pages/01portada.html
+++ b/libro/pages/01portada.html
@@ -4,7 +4,7 @@
 {% endblock %} {% block content2 %}
 <img src="{% static 'img/portada2.png' %}" class="imgcentral" />
 
-<p class="center">
+<p class="center"><strong>
   Cuando compartimos los regalos de la vida, estos se hacen <br />
   más valiosos. Hoy queremos dejar este legado para todos <br />
   aquellos que con amor buscan impregnar la vida de magia <br />
@@ -16,3 +16,7 @@
 </p>
 
 {% endblock %}
+
+
+
+
