--- a/libro/pages/05-personaportada.html
+++ b/libro/pages/05-personaportada.html
@@ -1,4 +1,4 @@
-{% extends "content.html" %} {%block title %} pagina 1 {% endblock %} {% load static %} {% block content1 %}
+{% extends 'layout.html' %} {%block title %} {% endblock %} {% load static %} {% block content1 %}
 <!--<script src='{% static "js\camera.js" %}'></script>-->
 <div class="fotos">
 
