--- a/libro/pages/01portada.html
+++ b/libro/pages/01portada.html
@@ -11,8 +11,7 @@
   y alimentar su ser, para su crecimiento y evolución.
   <br />
   <span class="cursiva-media"
-    >Maricela García Alvarez y Gonzalo Álvarez Árias</span
-  >
+    >Maricela García Alvarez y Gonzalo Álvarez Árias</span>
 </p>
 
 {% endblock %}
