--- a/libro/pages/04-agradecimientos-indice.html
+++ b/libro/pages/04-agradecimientos-indice.html
@@ -26,12 +26,12 @@
     <a href="/magia01/"> La magia<span>17</span></a></a><br>
     <a href="/agua01/"> Acto I - Agua</a>
     <a href="/agua03/"> &emsp; -Cuestionario de autodimensión <span>28</span></a>
-    <a href=""> &emsp; -Resultado de las áreas <span>43</span></a>
-    <a href=""> &emsp; -Gráfica rueda de la vida <span>44</span></a>
-    <a href=""> &emsp; -Referentes gráficos <span>46</span></a>
+    <a href="/grafica1/"> &emsp; -Resultado de las áreas <span>43</span></a>
+    <a href="/grafica1/"> &emsp; -Gráfica rueda de la vida <span>44</span></a>
+    <a href="/grafica2/"> &emsp; -Referentes gráficos <span>46</span></a>
     <a href="/la-persona-importante/"> &emsp; -¿Quién soy yo? <span>50</span></a>
-    <a href=""> &emsp; -¿En qué soy o no exitoso? <span>52</span></a>
-    <a href=""> &emsp; -Para vivir el elemento agua en nuestras vidas<span>54</span></a><br>
+    <a href="/actuar1/'"> &emsp; -¿En qué soy o no exitoso? <span>52</span></a>
+    <a href="/quiensoy1/"> &emsp; -Para vivir el elemento agua en nuestras vidas<span>54</span></a><br>
 
     <a href=""> Acto II - Tierra</a>
     <a href=""> &emsp; -¿Cuál es mi camino? <span>64</span></a>
