generado hasta acto tierra

--- a/libro/pages/01portada.html
+++ b/libro/pages/01portada.html
@@ -11,7 +11,7 @@
   y alimentar su ser, para su crecimiento y evolución.
   <br />
   <span class="cursiva-media"
-    >Maricela García Alvarez y Gonzalo Álvarez Árias</span>
+    >Maricela García Alvarez, Gonzalo Álvarez Árias y Juan Arroyave</span>
 </p>
 
 {% endblock %}
