--- a/libro/pages/04-agradecimientos-indice.html
+++ b/libro/pages/04-agradecimientos-indice.html
@@ -30,12 +30,12 @@
     <a href="/grafica1/"> &emsp; -Gráfica rueda de la vida <span>44</span></a>
     <a href="/grafica2/"> &emsp; -Referentes gráficos <span>46</span></a>
     <a href="/la-persona-importante/"> &emsp; -¿Quién soy yo? <span>50</span></a>
-    <a href="/actuar1/'"> &emsp; -¿En qué soy o no exitoso? <span>52</span></a>
+    <a href="/actuar1/"> &emsp; -¿En qué soy o no exitoso? <span>52</span></a>
     <a href="/quiensoy1/"> &emsp; -Para vivir el elemento agua en nuestras vidas<span>54</span></a><br>
 
-    <a href=""> Acto II - Tierra</a>
-    <a href=""> &emsp; -¿Cuál es mi camino? <span>64</span></a>
-    <a href=""> &emsp; -Gente / cosas ¿Qué significan para mi? <span>67</span></a>
+    <a href="/tierra001/"> Acto II - Tierra</a>
+    <a href="/tierra003/"> &emsp; -¿Cuál es mi camino? <span>64</span></a>
+    <a href="/tierra005/"> &emsp; -Gente / cosas ¿Qué significan para mi? <span>67</span></a>
     <a href=""> &emsp; -Mi camino es <span>71</span></a>
     <a href=""> &emsp; -¿Cuál es mi destino? <span>72</span></a>
     <a href=""> &emsp; -Mi destino es <span>77</span></a>
@@ -68,13 +68,12 @@
 
     <a href=""> &emsp; -Para vivir el elemento fuego en nuestras vidas<span>140</span></a><br>
 </ol>
-<a class="siguiente" href="/prologo1">-></a>
+
 
 {% endblock %}
 
-{% block footer %}
+
 
 
 {% include 'footer.html' %}
 
-{% endblock %}
