--- a/libro/pages/10-magia04.html
+++ b/libro/pages/10-magia04.html
@@ -1,14 +1,14 @@
  {% extends "content.html" %} {%block title %} pagina 1 {% endblock %} {% load static %}{% block content1 %}
 
-<section>
-    <img src='{% static "img/agua/agua02.png" %}' alt="" class="portrait">
-</section>
+
+    <img src='{% static "img/agua/agua02.png" %}' alt="" class="imgcentral-i">
+
 {% endblock %} {% block content2 %}
 
 
-<section>
-    <img src='{% static "img/agua/agua04.png" %}' alt="" class="portrait">
-</section>
+
+    <img src='{% static "img/agua/agua04.png" %}' alt="" class="imgcentral-d">
+
 
 
 
