--- a/libro/pages/14-agua01.html
+++ b/libro/pages/14-agua01.html
@@ -38,16 +38,16 @@
     }
 </style>
 
-<section class="backimage">
+<section class="backimage" style="width:90%;">
 
     <h3 class="cursiva-media"> Tú despiertas la magia que existe en ti.</h3>
-    <p style="width: 90%;">
+    <p style="width: 80%;" class="center">
         <h5>Trabajemos sobre el primer elemento:</h5> <br>
         <h5>AGUA.</h5>
          
-        El 70% de la masa corporal de una persona adulta está compuesto por el agua, y el 71% de la superficie de la tierra
-         es agua. Este es un elemento que habla de la fluidez, la serenidad, de ser flexible ante las lecciones de la vida,
-         de andar sin detenerse y de ser cambiante en todas las dimensiones de tu ser.
+        El 70% de la masa corporal de una persona adulta está compuesto por el agua, <br> y el 71% de 
+        la superficie de la tierra es agua. Este es un elemento que habla de la fluidez, <br> la serenidad, de ser
+        flexible ante las lecciones de la vida, de andar sin detenerse y de ser <br>cambiante en todas las dimensiones de tu ser.
     </p>
 
 </section>
