--- a/libro/pages/17-grafica.html
+++ b/libro/pages/17-grafica.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %} {% load static %} {% block content1 %}
-<img src="{% static 'img/17/17-vidaequilibrada.png' %}" class="portrait" />
+<img src="{% static 'img/17/17-vidaequilibrada.png' %}" class="imgcentral-i" />
 
 {% endblock %} {% block content2 %}
-<img src="{% static 'img/17/17-rueda de lavida.png' %}" class="portrait" />
+<img src="{% static 'img/17/17-rueda de lavida.png' %}" class="imgcentral-d" />
 
 
 
