--- a/libro/pages/19-actuar1.html
+++ b/libro/pages/19-actuar1.html
@@ -4,7 +4,7 @@
 <br>
 <br>
 <br>
-<h2> Se llegó la hora de <h2>
+<h2 style="color: whitle;"> Se llegó la hora de <h2>
   <h3 class= 'cursiva-media'> actuar para seguir <h3>
 
 {% endblock %} {% block content2 %}
