--- a/libro/pages/10-magia03.html
+++ b/libro/pages/10-magia03.html
@@ -1,14 +1,14 @@
  {% extends "content.html" %} {%block title %} pagina 1 {% endblock %} {% load static %}{% block content1 %}
 
-<section>
-    <img src='{% static "img/agua/yo1.png" %}' alt="" class="portrait">
-</section>
+
+    <img src='{% static "img/agua/yo1.png" %}' alt="" class="imgcentral-i">
+   
+
 {% endblock %} {% block content2 %}
 
 
-<section>
-    <img src='{% static "img/agua/agua03.png" %}' alt="" class="portrait">
-</section>
+    <img src='{% static "img/agua/agua03.png" %}' alt="" class="imgcentral-d">
+
 
 
 
