faltan metas grafica y tabla

--- a/libro/pages/04-agradecimientos-indice.html
+++ b/libro/pages/04-agradecimientos-indice.html
@@ -16,7 +16,13 @@
     <br>
 
 </p>
-<img src='{% static "img/p3/firma.pNG" alt="firma" %}'> {% endblock %} {% block content2 %}
+<!-- <img src='{% static "img/p3/firma.pNG" alt="firma" %}'>  -->
+<div style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width:70%; text-align:left">
+    <p >Maricela García Álvarez</p>
+    <p >Gonzálo Alvarez Arias</p>
+    <p >Juan Arroyave</p>
+</div>
+{% endblock %} {% block content2 %}
 <span class="cursiva-media">Indice</span>
 
 <ol class="indice">
