--- a/libro/pages/09-introduccion2.html
+++ b/libro/pages/09-introduccion2.html
@@ -1,7 +1,7 @@
 {% extends "content.html" %} {%block title %} pagina 1 {% endblock %} {% load static %} {% block imagenCentral %}
 <img src="{% static 'img/intro1/intro2.png' %}" alt="imagenCentral" class="imgcentral" id="imagenCentral"> {% endblock %} {% block content1 %}
 
-<h2 class="cursiva-media">Ahora bien terminando este ejercicio te contaremos lo siguiente:</h2>
+<h3 class="cursiva-media">Ahora bien terminando este ejercicio te contaremos lo <br> siguiente:</h3>
 
 
 <p>
@@ -21,16 +21,17 @@
 <p>
 
     Querido lector: podrás encontrar en nuestro libro diferentes conceptos y herramientas, que te guiarán por el camino del autodescubrimiento. Al recorrerlo, te invitaremos a ejecutar una serie de ejercicios que se plantean para el buen desarrollo de la
-    metodología, y podrás contemplar que, como seres humanos, somos muchas cosas extraordinarias en este viaje tan maravilloso llamado VIDA.
-    <br><br> El libro está dividido en
-    <span class="cursiva-media">Actos y Elementos.</span> En los actos siempre podrás leer una historia introductoria, que ocurre entre dos personajes ficticios (maestro y discípulo), que intentan explicar, a través de sus vivencias, los pensamientos
+    metodología, y podrás contemplar que, como seres humanos, somos muchas cosas extraordinarias en este viaje tan maravilloso llamado VIDA.</p>
+
+
+    <p> El libro está dividido en  <span class="cursiva-media" style="font-size: 25px;">Actos y Elementos.</span> En los actos siempre podrás leer una historia introductoria, que ocurre entre dos personajes ficticios (maestro y discípulo), que intentan explicar, a través de sus vivencias, los pensamientos
     y sentimientos que pasan por la mente consciente. Los actos se dividen en escenas, como si de una película se tratase: la película de tu propia vida, en la que te identificarás tú mismo como protagonista, a medida que avances en el desarrollo de los
     ejercicios. Te será fácil comprobar en cada acto la profundidad y la amplitud de conocimiento que tienes sobre ti. Los elementos de la naturaleza, como el agua, la tierra, el aire y el fuego, hacen parte de esta metodología, ya que nosotros, inspirados
     en diversas culturas como la china, la egipcia, la hindú, y otras que han atribuido al hombre una conexión especial con la naturaleza, hemos construido información detallada con la que podrás interactuar con cada elemento en ti y en la que podrás
-    ver cómo el equilibrio de los cuatro elementos supone una vida más ordenada y feliz.
+    ver cómo el equilibrio de los cuatro elementos supone una vida más ordenada y feliz.</p>
 
-    <br><br> Agradecemos que el libro se encuentre en tus manos. Dispón tu cuerpo, tu mente, tu emoción y tu espíritu, para que puedas disfrutar de este viaje de magia interior en el que tú eres el protagonista principal del “Libro de mi Vida”.
+    <p> Agradecemos que el libro se encuentre en tus manos. Dispón tu cuerpo, tu mente, tu emoción y tu espíritu, para que puedas disfrutar de este viaje de magia interior en el que tú eres el protagonista principal del “Libro de mi Vida”.</p> 
 
-</p>
+
 
 {% endblock %}
