--- a/libro/pages/19-actuar1.html
+++ b/libro/pages/19-actuar1.html
@@ -1,14 +1,16 @@
 {% extends 'layout.html' %} {% load static %} {% block content1 %}
-<img src="{% static 'img/19/01.png' %}" class="imgcentral" />
+<img src="{% static 'img/19/01.png' %}" class="imgcentral-i" />
 
 <br>
 <br>
 <br>
-<h2 style="color: whitle;"> Se llegó la hora de <h2>
-  <h3 class= 'cursiva-media'> actuar para seguir <h3>
+<div style="z-index: 5; color:white; margin-top:25%">
+  <h2 style="color: whitle; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"  > Se llegó la hora de <h2>
+    <h3 class= 'cursiva-media'> actuar para seguir <h3>
+</div>
 
 {% endblock %} {% block content2 %}
-<img src="{% static 'img/19/02.png' %}" class="imgcentral" />
+<img src="{% static 'img/19/02.png' %}" class="imgcentral-d" />
 
 <p class="center">
   Sugerimos que en una hoja amarilla (El amarillo es el color de la <br />
