--- a/libro/pages/20-quien-soy1.html
+++ b/libro/pages/20-quien-soy1.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %} {% load static %} {% block content1 %}
 
-<img src="{% static 'img/20/01.png' %}" class="imgcentral" />
+<img src="{% static 'img/20/01.png' %}" class="imgcentral-i" />
 
   <div>
   <h3 class="cursiva-media">
@@ -63,7 +63,7 @@
 
       
       {% endblock content1 %} {% block content2 %}
-      <img src="{% static 'img/20/02.png' %}" class="imgcentral" />
+      <img src="{% static 'img/20/02.png' %}" class="imgcentral-d" />
       
       <div class="qs">
         <label for="11">11.</label>
