--- a/libro/pages/27-tierra004.html
+++ b/libro/pages/27-tierra004.html
@@ -67,6 +67,13 @@ mundo que te rodea.
     <br><br>
 </div>
 
-
+<button
+class="btn btn-dark"
+id="btn-guardar"
+onSubmit="{guardar(e)}"
+style="z-index: 3"
+>
+Guardar
+</button>
 
 {% endblock content2 %}
