--- a/libro/pages/28-tierra005.html
+++ b/libro/pages/28-tierra005.html
@@ -10,7 +10,7 @@
 {% block content1 %}
 
 
-<p class="center" style="font-size: 24px;">
+<p class="center" style="margin-top:0; font-size: 20px;">
   Ahora vas a asumir un <br>
   nuevo reto con todo el <br>
   amor y consciencia posible, es <br>
