--- a/libro/pages/32-tierra009.html
+++ b/libro/pages/32-tierra009.html
@@ -20,36 +20,8 @@
 
 <h2 class="cursiva-media" style="z-index: 5;" >mi Destino es:</h2>
 
-<form action="" style="z-index: 5;">
-  <div class="qs">
-    <label for="1"> 1.</label>
-    <input type="textarea" name="1" placeholder="" size="60" />
-  </div>
-
-  <div class="qs">
-    <label for="2">2.</label>
-    <input type="textarea" name="2" placeholder="" size="60" />
-  </div>
-
-  <div class="qs">
-    <label for="3"> 3.</label>
-    <input type="textarea" name="3" placeholder="" size="60" />
-  </div>
-
-  <div class="qs">
-    <label for="4"> 4.</label>
-    <input type="textarea" name="4" placeholder="" size="60" />
-  </div>
-
-  <div class="qs">
-    <label for="5"> 5.</label>
-    <input type="textarea" name="5" placeholder="" size="60" />
-  </div>
-
-  <div class="qs">
-    <label for="6"> 6.</label>
-    <input type="textarea" name="6" placeholder="" size="60" />
-  </div>
+<form action="" style="z-index: 5; display:flex; flex-direction:column ">
+  <textarea name="" id="" cols="60" rows="8" style="background-color: white;"></textarea>
 
   <button
     class="btn btn-dark"
