--- a/libro/pages/34-tierra011.html
+++ b/libro/pages/34-tierra011.html
@@ -5,7 +5,7 @@
 {% endblock %} {% block content1 %}
 
 <div style="width: 80%">
-  <p align="justify">
+  <p style="text-align: justify">
     El elemento tierra representa el guerrero protector del camino.<br />
     El guerrero se presenta en tu vida, cuando ves manifestadas en tu <br />
     ser dificultades con la autoridad, caes fácilmente en discusiones y<br />
@@ -23,7 +23,7 @@
     más corto en la vida.<br />
     <br /><br />
   </p>
-  <p style="color: rgb(39, 93, 39); font-weight: 600" align="justify">
+  <p style="color: rgb(41, 129, 41); font-weight: 600" align="justify">
     Recuerda que la verdad no debe ser cruel sino natural, motivada <br />
     por el amor y el respeto a los demás y a ti mismo. Asumir la <br />
     responsabilidad en cada acto, cómo aprender a decir “SI” y aprender a decir
@@ -81,6 +81,11 @@
     Para introyectar el elemento tierra te sugerimos escribir estas frases donde
     las puedas leer diariamente
   </p>
+
 </div>
+
+<p>
+  <span class="cursiva-media" style="font-size: 30px;" >¡Felicitaciones!</span> ahora ya tienes tu destino claro y es tiempo de recorrer el camino, recuerda que tu palabra es un contrato y en el momento qen que la escribes se convierte en una verdad, firma el compromiso con tu vida y alcanza tu destino recorriendo el camino con amor.
+</p>
 
 {% endblock content2 %}
