--- a/libro/pages/10-la-magia2.html
+++ b/libro/pages/10-la-magia2.html
@@ -1,9 +1,9 @@
 {% extends "content.html" %} {%block title %} pagina 1 {% endblock %} {% load static %} {% block content1 %}
 
 <p>
-    Pero maestro no entiendo algo: ¿Qué tiene que ver mi mente con la transformación?
+    Pero maestro no entiendo algo: ¿Qué tiene que ver mi mente con la transformación? <br>
     <br> - Tu mente es el testigo, el observador de la historia del mundo, tu mente es la consciencia que comprende cómo ocurren las cosas, tu mente conectada con el universo es el regalo que te fue entregado para vivir plenamente tu existencia, una mente
-    conectada con cada suceso también experimenta la transformación: ser testigo, mi querido discípulo, es transformarse.
+    conectada con cada suceso también experimenta la transformación: ser testigo, mi querido discípulo, <span style="font-size: 120%; color:blueviolet"> es transformarse</span>.
 </p>
 
 <p>
