--- a/libro/pages/25-tierra002.html
+++ b/libro/pages/25-tierra002.html
@@ -11,24 +11,25 @@
 
 
  <p class="center">
-  El elemento tierra hace referencia a la <span style="font-family: Square peg, cursive; font-size:26">firmeza, al camino que recorres y cómo, a
-    partir de este, encuentras tu propósito.</span> <br>
+  El elemento tierra hace referencia a la <span style="font-family: Square peg, cursive; font-size:30px ">firmeza, al camino que recorres y cómo, a
+    partir de este, encuentras tu propósito.</span> <br> <br>
 Para entender mucho mejor a qué hacemos referencia, te invitamos a que te
 adentres en el mundo del maestro y su joven discípulo, en una de sus tantas
-jornadas, en las que este, a través de preguntas, descubría el mundo. <br>
+jornadas, en las que este, a través de preguntas, descubría el mundo. <br> <br>
 Aquella mañana el silencio era más profundo de lo normal, solo se escuchaban las
 hojas de los árboles caer en el bosque, los pájaros que llegaban y algunos que se
 iban, el discípulo miraba fijamente al cielo y en pequeños lapsos dirigía su mirada
-a la tierra observando cómo caían las hojas. <br>
+a la tierra observando cómo caían las hojas. <br> <br>
 El maestro percibiendo la pregunta interna de su discípulo se acercó y lo
 acompañó en su silencio durante unos minutos, finalmente su aprendiz rompió el
-silencio y dijo con voz tranquila: <br>
+silencio y dijo con voz tranquila: <br> 
 <span style="font-style:italic; ">
   Maestro hoy me siento vacío, hoy siento que aún no he comprendido mi papel en
 el mundo, no sé qué hacer con estas dudas que crecen en mí, sé que hace poco
 me hablaste de ser como el agua, de lo importante que es estar atento a las
 transformaciones del mundo, y consciente de lo que soy, pero aun teniendo un
-poco claro esto, no comprendo mi papel.
+poco claro esto, no comprendo mi papel. <br>
+
 
 </span> <br>
 El maestro guardó silencio un instante, y finalmente se decidió a hablar:
@@ -53,7 +54,7 @@ parte de otro ciclo maravilloso que ha de cumplirse en la naturaleza.
 una nueva etapa; solo disfruta de la quietud que te ofrece dejar que las cosas por
 si mismas sientan la tierra que tocan. Tu camino (misión) y tu destino (visión) son
 una representación del regalo que has decidido legar, disfruta los ciclos de tu vida
-y respeta el camino que has elegido, para que el camino te guie a ti.
+y respeta el camino que has elegido, para que el camino te guie a ti. <br> <br>
 El sendero por el que has elegido caminar es el regalo de la tierra; recorre este
 camino con la verdad y la certeza en cada paso. Recuerda que el propósito de
 estar aquí, es ser jardineros de este paraíso de cosas maravillosas que nos fueron legadas, y ser jardinero sólo puede significar cuidar esta tierra y hacerla más
@@ -61,7 +62,7 @@ próspera para el que vendrá.
   </p>
 </div>
 <p class="center">
-  Que la misión y el futuro en construcción que elijas apunte siempre a ello.
+  Que la misión y el futuro en construcción que elijas apunte siempre a ello. <br>
   <br>
 En el acto anterior tuviste la oportunidad de reconocerte, ahora en este acto te vas
 a permitir conectar ese descubrimiento que hiciste de ti mismo con el propósito de
